# terraform-aws-asg-dns-discovery

./: .gitignore  LICENSE  Makefile  README.md  asg.tf  bootstrap.ps1  bootstrap.sh  data.tf  dynamo.tf  lambda-iam.tf  lambda-lifecycle.tf  lambda-reconciliation.tf  lambda-shared.tf  locals.tf  monitoring.tf  pyproject.toml  route53.tf  sns.tf  variables.tf
.devcontainer/: devcontainer.json
src/lambda/: pytest.ini
src/lambda/app/api/: lifecycle.py  reconciler.py
src/lambda/app/components/dns/: dependency_registrar.py  dns_management_interface.py  dns_management_service.py  dns_value_resolver_interface.py  dns_value_resolver_service.py
src/lambda/app/components/healthcheck/: dependency_registrar.py  health_check_interface.py  healthcheck_service.py
src/lambda/app/components/lifecycle/: dependency_registrar.py  instance_lifecycle_interface.py
src/lambda/app/components/metadata/: dependency_registrar.py  instance_metadata_interface.py
src/lambda/app/components/metrics/: dependency_registrar.py  metrics_factory.py  metrics_interface.py  metrics_service.py
src/lambda/app/components/mutex/: dependency_registrar.py  (+1 more)
src/lambda/app/config/: configuration_service.py  env_configuration_service.py  instrumentation.py  runtime_configuration_service.py  runtime_context.py
src/lambda/app/domain/: lifecycle_service.py  reconciliation_service.py
src/lambda/app/utils/: dataclass.py  di.py  exceptions.py  instrumentation.py  logging.py  serialization.py  singleton.py
src/lambda/tests/: conftest.py  pytest.ini
src/lambda/tests/tests_unit/: conftest.py
(+62 files in other folders)
